@@ -24,6 +24,7 @@
 #include <stdio.h>
 #include <pthread.h>
 #include <stdlib.h>
+#include <unistd.h>
 
 #include "extrae_user_events.h"
 
